# platoons

./: .gitignore  README.md
plat_app/plat_cfg/: CMakeLists.txt  package.xml
plat_com/plat_form/: CMakeLists.txt  package.xml
plat_com/plat_frm/: CMakeLists.txt  package.xml
plat_sdc/plat_loc/: CMakeLists.txt  package.xml
plat_sdc/plat_loc/launch/: plat_compute_distance_ahead.launch
plat_sdc/plat_loc/scripts/: compute_distance_ahead.py
plat_sdc/plat_nav/: CMakeLists.txt  package.xml
plat_sdc/plat_nav/launch/: plat_nav_distAheadControl.launch  plat_nav_pathexec.launch  plat_nav_pathexec_lead.launch  plat_nav_pathexec_merge.launch  plat_nav_recordpreplan_lead.launch  plat_nav_recordpreplan_merge.launch
plat_sdc/plat_nav/scripts/: plat_nav_dAheadController.py  plat_nav_ptracker.py
plat_sdc/plat_nav/scripts/cfg/: ptracker_cfg.py
plat_sdc/plat_nav/scripts/controller/: pid.py  stanley.py
plat_sdc/plat_nav/scripts/planner/: preplan_parser.py  preplan_recorder.py  quat_2_euler.py  wphandler.py
plat_sdc/plat_nav/scripts/planner/csp/: csp_driver.py  csp_generator.py  cubic_spline_planner.py
plat_sdc/plat_nav/scripts/planner/genOdomData/: leadvehicle_gen_odom_data.txt  mergevehicle_gen_odom_data.txt
plat_sdc/plat_nav/scripts/planner/genPathData/: leadvehicle_parse_x_points.txt  leadvehicle_parse_y_points.txt  leadvehicle_parse_yaw_points.txt  mergevehicle_parse_x_points.txt  mergevehicle_parse_y_points.txt  mergevehicle_parse_yaw_points.txt
plat_sim/plat_bywire/: CMakeLists.txt  package.xml
plat_sim/plat_dbw/: CMakeLists.txt  package.xml
plat_sim/plat_dbw/launch/: plat_dbw_llc.launch  plat_dbw_manualcontrol.launch  plat_dbw_manualcontrol_lead.launch  plat_dbw_manualcontrol_merge.launch  plat_dbw_odom.launch  plat_dbw_odom_lead.launch  plat_dbw_odom_merge.launch
plat_sim/plat_dbw/scripts/: plat_dbw_llc.py  plat_dbw_odom.py
plat_sim/plat_dbw/scripts/cfg/: cfg.py
plat_sim/plat_gaz/: CMakeLists.txt  package.xml
plat_sim/plat_gaz/launch/: plat_fullsim_gazebo.launch  plat_gaz_fullcity.launch  plat_gaz_leadvehicle.launch  plat_gaz_mergevehicle.launch  plat_gaz_platoon.launch  plat_gaz_stringvehicles.launch
plat_sim/plat_gaz/yaml/: plat_gaz_leadvehicle.yaml
plat_sim/plat_gazebo/: CMakeLists.txt  package.xml
plat_sim/plat_map/: CMakeLists.txt  package.xml
plat_sim/plat_map/worlds/: plat_map_fullcity.world
plat_sim/plat_msg/: CMakeLists.txt  package.xml
plat_sim/plat_msg/msg/: PlatMsgVehicleCmd.msg
