<?xml version="1.0"?>
<package format="2">
  <name>plat_gaz</name>
  <version>0.0.0</version>
  <description>The plat_gaz package: Package responsible for interfacing and launching the visualization models</description>
  <maintainer email="oks@todo.todo">oks</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>dbw_mkz_gazebo</build_depend>
  <build_depend>dbw_mkz_can</build_depend>
  <build_depend>dataspeed_dbw_gazebo_demo</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>dbw_mkz_gazebo</build_export_depend>
  <build_export_depend>dbw_mkz_can</build_export_depend>
  <build_export_depend>dataspeed_dbw_gazebo_demo</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>dbw_mkz_gazebo</exec_depend>
  <exec_depend>dbw_mkz_can</exec_depend>
  <exec_depend>dataspeed_dbw_gazebo_demo</exec_depend>
  <export>
  </export>
</package>
